// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/person should render correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <p
    className="c-type--p m-person__name"
  >
    <strong>
      bar
    </strong>
  </p>
  <address
    className="m-person__address c-type--address"
    itemProp="address"
    itemScope={true}
    itemType="http://schema.org/Address"
  >
    <span
      className="m-person__street-address"
      itemProp="street-address"
    >
      streetAddress
    </span>
    <span
      className="m-person__postal-code"
      itemProp="postal-code"
    >
      postalCode
    </span>
    <span
      className="m-person__locality"
      itemProp="locality"
    >
      locality
    </span>
  </address>
  <p
    className="c-type--p m-person__email"
  >
    <abbr
      title="E-Mail address"
    >
      E.
    </abbr>
     
    <a
      href="malto:email"
      itemProp="email"
    >
      email
    </a>
  </p>
  <p
    className="c-type--p m-person__website"
  >
    <abbr
      title="Website"
    >
      W.
    </abbr>
     
    <a
      href="website"
    >
      website
    </a>
  </p>
  Module person children
</menu>
`;

exports[`common/component/module/person should render isCentered correctly 1`] = `
<menu
  className="is-centered m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <p
    className="c-type--p m-person__name"
  >
    <strong>
      bar
    </strong>
  </p>
  <address
    className="m-person__address c-type--address"
    itemProp="address"
    itemScope={true}
    itemType="http://schema.org/Address"
  >
    <span
      className="m-person__street-address"
      itemProp="street-address"
    >
      streetAddress
    </span>
    <span
      className="m-person__postal-code"
      itemProp="postal-code"
    >
      postalCode
    </span>
    <span
      className="m-person__locality"
      itemProp="locality"
    >
      locality
    </span>
  </address>
  <p
    className="c-type--p m-person__email"
  >
    <abbr
      title="E-Mail address"
    >
      E.
    </abbr>
     
    <a
      href="malto:email"
      itemProp="email"
    >
      email
    </a>
  </p>
  <p
    className="c-type--p m-person__website"
  >
    <abbr
      title="Website"
    >
      W.
    </abbr>
     
    <a
      href="website"
    >
      website
    </a>
  </p>
  Module person children
</menu>
`;

exports[`common/component/module/person should render just a name correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <p
    className="c-type--p m-person__name"
  >
    <strong>
      bar
    </strong>
  </p>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should render just a phone number correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should render just a website correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <p
    className="c-type--p m-person__website"
  >
    <abbr
      title="Website"
    >
      W.
    </abbr>
     
    <a
      href="website"
    >
      website
    </a>
  </p>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should render just an address correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <address
    className="m-person__address c-type--address"
    itemProp="address"
    itemScope={true}
    itemType="http://schema.org/Address"
  >
    <span
      className="m-person__street-address"
      itemProp="street-address"
    >
      streetAddress
    </span>
    <span
      className="m-person__postal-code"
      itemProp="postal-code"
    >
      postalCode
    </span>
    <span
      className="m-person__locality"
      itemProp="locality"
    >
      locality
    </span>
  </address>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should render just an email correctly 1`] = `
<menu
  className="m-person foo"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <p
    className="c-type--p m-person__email"
  >
    <abbr
      title="E-Mail address"
    >
      E.
    </abbr>
     
    <a
      href="malto:email"
      itemProp="email"
    >
      email
    </a>
  </p>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should render no itemType if unset 1`] = `
<menu
  className="m-person foo"
>
  <p
    className="c-type--p m-person__name"
  >
    <strong>
      bar
    </strong>
  </p>
  <address
    className="m-person__address c-type--address"
    itemProp="address"
    itemScope={true}
    itemType="http://schema.org/Address"
  >
    <span
      className="m-person__street-address"
      itemProp="street-address"
    >
      streetAddress
    </span>
    <span
      className="m-person__postal-code"
      itemProp="postal-code"
    >
      postalCode
    </span>
    <span
      className="m-person__locality"
      itemProp="locality"
    >
      locality
    </span>
  </address>
  <p
    className="c-type--p m-person__email"
  >
    <abbr
      title="E-Mail address"
    >
      E.
    </abbr>
     
    <a
      href="malto:email"
      itemProp="email"
    >
      email
    </a>
  </p>
  <p
    className="c-type--p m-person__website"
  >
    <abbr
      title="Website"
    >
      W.
    </abbr>
     
    <a
      href="website"
    >
      website
    </a>
  </p>
  Module person children
</menu>
`;

exports[`common/component/module/person should render no schema if not given 1`] = `
<menu
  className="m-person foo"
>
  <p
    className="c-type--p m-person__name"
  >
    <strong>
      bar
    </strong>
  </p>
  <address
    className="m-person__address c-type--address"
    itemProp="address"
    itemScope={true}
    itemType="http://schema.org/Address"
  >
    <span
      className="m-person__street-address"
      itemProp="street-address"
    >
      streetAddress
    </span>
    <span
      className="m-person__postal-code"
      itemProp="postal-code"
    >
      postalCode
    </span>
    <span
      className="m-person__locality"
      itemProp="locality"
    >
      locality
    </span>
  </address>
  <p
    className="c-type--p m-person__email"
  >
    <abbr
      title="E-Mail address"
    >
      E.
    </abbr>
     
    <a
      href="malto:email"
      itemProp="email"
    >
      email
    </a>
  </p>
  <p
    className="c-type--p m-person__website"
  >
    <abbr
      title="Website"
    >
      W.
    </abbr>
     
    <a
      href="website"
    >
      website
    </a>
  </p>
  Module person children not rendered
</menu>
`;

exports[`common/component/module/person should return null if no content is given 1`] = `null`;
